# inferece_of_dfas_random_downsampled_yonsei

./: Makefile  config.h  config.h.in~  config.status  configure  configure.ac  libtool
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
experiments/user10_EDSM_06_07_10_56_17/3/: wyd-10-samples-CV0.txt  wyd-10A-CV0-TXTbluestarALF.txt  wyd-10A-DOTbluestarALF-CV0.dot  wyd-APTA.dot  wyd-APTA_ALF.dot
experiments/user10_EDSM_06_07_10_56_17/4/: wydj-10-samples-CV0.txt  wydj-10A-CV0-TXTbluestarALF.txt  wydj-10A-DOTbluestarALF-CV0.dot  wydj-APTA.dot  wydj-APTA_ALF.dot
experiments/user10_EDSM_06_07_10_56_17/5/: wydm8-10-samples-CV0.txt  wydm8-10A-CV0-TXTbluestarALF.txt  wydm8-10A-DOTbluestarALF-CV0.dot  wydm8-APTA.dot  wydm8-APTA_ALF.dot
experiments/user12_EDSM_06_07_10_56_17/1/: w-12-samples-CV0.txt  w-12A-DOTbluestarALF-CV0.dot  w-APTA.dot  w-APTA_ALF.dot
experiments/user12_EDSM_06_07_10_56_17/2/: wy-12-samples-CV0.txt  wy-APTA.dot  wy-APTA_ALF.dot
experiments/user12_EDSM_06_07_10_56_17/3/: wyd-12-samples-CV0.txt  (+4 more)
mylibraries/headers/: dfa.h  idsm.h
src/: .geoExp.h.swp  Makefile  Makefile.am  Makefile.in  execute_all_users.sh  geoExp.cpp  geoExp.h  learn_geo.cpp  log_10_100perc.txt  log_12_100perc.txt  log_1_100perc.txt  log_2_100perc.txt  log_3_100perc.txt  log_4_100perc.txt  log_7_100perc.txt  log_8_100perc.txt  log_9_100perc.txt
src/.deps/: gigeo-geoExp.Po  gigeo-geodb.Po  gigeo-learn_geo.Po
(+231 files in other folders)
